--- a/development/package.json
+++ b/development/package.json
@@ -1,28 +1,28 @@
 {
 	"name": "wi_vars",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"copyright": "Jannik Mewes / Wolf Interactive",
-
 	"author": "Jannik Mewes / Wolf Interactive",
 	"author_email": "jm@wolfinteractive.de",
 	"author_url": "http://wolfinteractive.de",
 	"license": "http://www.gnu.org/copyleft/gpl.html GNU/GPL",
-
 	"prefix": "wi_var",
 	"id": "wi_vars",
 	"camel": "wiVars",
 	"title": "Wolf Interactive - Variables plugin",
 	"descr": "This plugin allows access to several useful variables like {{wi_var:sitename}} and {{wi_var:baseURI}}. It is now possible to access data of active menuitem using {{wi_var:menuitem:title|alias|myvar}}. Works together with wi_menuitem_params! A really simple if clause is possible too - but without nesting! Use {{wi_var:if:var_name}} {{wi_var:endif}}",
-
+	"scripts": {
+		"build": "grunt build"
+	},
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-copy": "~1.0.0",
 		"grunt-contrib-concat": "~1.0.1",
 		"grunt-contrib-compress": "~1.4.1",
-        "grunt-contrib-cssmin" : "~2.0.0",
-        "grunt-contrib-watch" : "~1.0.0",
-        "grunt-contrib-less" : "~1.4.1",
-        "grunt-contrib-uglify" : "~2.3.0",
-        "grunt-contrib-clean" : "~1.1.0"
+		"grunt-contrib-cssmin": "~2.0.0",
+		"grunt-contrib-watch": "~1.0.0",
+		"grunt-contrib-less": "~1.4.1",
+		"grunt-contrib-uglify": "~2.3.0",
+		"grunt-contrib-clean": "~1.1.0"
 	}
 }
